--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe Professionnelle en Île-de-France</title>
-	<meta name="description" content="Découvrez les services de Nina Carducci, photographe professionnelle spécialisée dans les portraits, mariages, concerts, et photographies d'entreprises en Île-de-France. Immortalisez vos moments précieux avec une approche artistique et personnalisée.">
+	<meta name="description" content="Nina Carducci, photographe pro en Île-de-France : portraits, mariages, concerts, entreprises. Capturez vos moments précieux !.">
 	<meta name="keywords" content="photographe, portrait, mariage, concert, entreprise, Île-de-France, photographie professionnelle, Nina Carducci, shooting photo, album photo, retouche photo">
 	<meta name="title" content="Nina Carducci - Photographe Professionnelle en Île-de-France">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
