--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 	<meta name="keywords" content="photographe, portrait, mariage, concert, entreprise, Île-de-France, photographie professionnelle, Nina Carducci, shooting photo, album photo, retouche photo">
 	<meta name="title" content="Nina Carducci - Photographe Professionnelle en Île-de-France">
 
-	
+
+<!-- OpenGraph Meta Tags -->
+<meta property="og:title" content="Nina Carducci - Photographe Professionnelle en Île-de-France">
+<meta property="og:description" content="Nina Carducci, photographe pro en Île-de-France : portraits, mariages, concerts, entreprises. Capturez vos moments précieux !.">
+<meta property="og:image" content="URL_de_l_image_de_partage.jpg">
+<meta property="og:url" content="http://127.0.0.1:5500/index.html">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Nina Carducci">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Nina Carducci - Photographe Professionnelle en Île-de-France">
+<meta name="twitter:description" content="Nina Carducci, photographe pro en Île-de-France : portraits, mariages, concerts, entreprises. Capturez vos moments précieux !.">
+<meta name="twitter:image" content="URL_de_l_image_de_partage.jpg">
+<meta name="twitter:site" content="@ton_handle_twitter">
 
 
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
