--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<meta name="twitter:image" content="URL_de_l_image_de_partage.jpg">
 	<meta name="twitter:site" content="@ton_handle_twitter">
 
-
+	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
